# OEECF

./: .gitignore  README.md  cge_shocks_mitigated.json  cge_shocks_unmitigated.json  index.html  ogcore_shocks.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: python-app.yml
examples/: advanced_scenario.py  simple_coupling.py
oeecf/: __init__.py  cli.py  constants.py  engine.py  models.py
oeecf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
oeecf/shocks/: __init__.py  demand.py  labour.py  productivity.py
oeecf/translators/: __init__.py  cge.py  ogcore.py
oeecf/utils/: __init__.py  plotting.py
tests/: test_engine.py  test_models.py  test_translators.py
