[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oeecf"
version = "0.1.0"
authors = [
  { name="OEECF Team" },
]
description = "Open Epidemiological-Economic Coupling Framework"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "pydantic",
    "matplotlib"
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
"Homepage" = "https://github.com/tejassinghbhati/MUIOGO"

[project.scripts]
oeecf = "oeecf.cli:main"
